syntax = "proto3";

option java_multiple_files = true;

package com.university.department;
message Department {
  string name = 1;
}
message Profile {
  string id = 1;
}
service DepartmentService {
  rpc GetDepartment(Profile) returns (Department) {}
}