syntax = "proto3";

option java_multiple_files = true;

package com.university.professor;
import "google/protobuf/empty.proto";

message Profile {
  string name = 1;
  string city = 2;
  string country = 3;
  string department= 4;
  string id = 5;
}
service ProfessorService {
  rpc GetProfile(google.protobuf.Empty) returns (Profile) {}
}